--- a/src/app/pages/event-hooks-page/event-hook-view/event-hook-add-new/event-hook-add-new.component.html
+++ b/src/app/pages/event-hooks-page/event-hook-view/event-hook-add-new/event-hook-add-new.component.html
@@ -11,9 +11,9 @@
   </div>
 
   <div class="entity-view__card__content">
-    <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input auto-focus required md-input [disabled]="mode === modes.View" placeholder="{{'EVENTHOOK_INFO_NAME' | translate}}" [(ngModel)]="entity.name" type="text">
-    </md-input-container>
+    <mat-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
+      <input auto-focus required matInput [disabled]="mode === modes.View" placeholder="{{'EVENTHOOK_INFO_NAME' | translate}}" [(ngModel)]="entity.name" type="text">
+    </mat-input-container>
 
     <dropdown-component [class.error]="formInvalid && !entity"
                         [disabled]="mode === modes.View"
