--- a/src/app/pages/notifications-page/notifications-section/notifications-section.component.html
+++ b/src/app/pages/notifications-page/notifications-section/notifications-section.component.html
@@ -4,9 +4,9 @@
     <div class="header flex-custom flex-custom--center">
       <div class="mrw-bi-input">
         <mat-icon>search</mat-icon>
-        <md-input-container [floatingPlaceholder]="false">
-          <input md-input placeholder="{{'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filter" type="text">
-        </md-input-container>
+        <mat-input-container [floatPlaceholder]="false">
+          <input matInput placeholder="{{'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filter" type="text">
+        </mat-input-container>
       </div>
 
       <div class="mrw-button">MARK ALL AS READ</div>
