--- a/src/app/pages/search-page/advanced-search/advanced-search.component.html
+++ b/src/app/pages/search-page/advanced-search/advanced-search.component.html
@@ -4,26 +4,65 @@
 
     <div class="advanced-search__content__fields">
       <div class="advanced-search__content__fields__column">
-        <md-input #firstInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_FIRSTNAME' | translate}}" [(ngModel)]="searchOptions.firstname"></md-input>
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_LASTNAME' | translate}}" [(ngModel)]="searchOptions.lastname"></md-input>
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_PHONE' | translate}}" [(ngModel)]="searchOptions.phone"></md-input>
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_EMAIL' | translate}}" [(ngModel)]="searchOptions.email"></md-input>
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_TRACKINGNUMBER' | translate}}" [(ngModel)]="searchOptions.tracking_number"></md-input>
+        <mat-input-container>
+          <input matInput #firstInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_FIRSTNAME' | translate}}" [(ngModel)]="searchOptions.firstname">
+        </mat-input-container>
+
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_LASTNAME' | translate}}" [(ngModel)]="searchOptions.lastname">
+        </mat-input-container>
+
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_PHONE' | translate}}" [(ngModel)]="searchOptions.phone">
+        </mat-input-container>
+
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_EMAIL' | translate}}" [(ngModel)]="searchOptions.email">
+        </mat-input-container>
+
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_TRACKINGNUMBER' | translate}}" [(ngModel)]="searchOptions.tracking_number">
+        </mat-input-container>
       </div>
 
       <div class="advanced-search__content__fields__column">
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ADDRESS1' | translate}}" [(ngModel)]="searchOptions.address_line_1"></md-input>
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ADDRESS2' | translate}}" [(ngModel)]="searchOptions.address_line_2"></md-input>
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CITY' | translate}}" [(ngModel)]="searchOptions.city"></md-input>
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ZIP' | translate}}" [(ngModel)]="searchOptions.zip"></md-input>
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_STATE' | translate}}" [(ngModel)]="searchOptions.state"></md-input>
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ADDRESS1' | translate}}" [(ngModel)]="searchOptions.address_line_1">
+        </mat-input-container>
+
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ADDRESS2' | translate}}" [(ngModel)]="searchOptions.address_line_2">
+        </mat-input-container>
+
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CITY' | translate}}" [(ngModel)]="searchOptions.city">
+        </mat-input-container>
+
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ZIP' | translate}}" [(ngModel)]="searchOptions.zip">
+        </mat-input-container>
+
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_STATE' | translate}}" [(ngModel)]="searchOptions.state">
+        </mat-input-container>
       </div>
 
       <div class="advanced-search__content__fields__column">
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ALIAS' | translate}}" [(ngModel)]="searchOptions.alias"></md-input>
-        <md-input [disabled]="true" class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CCTYPE' | translate}}" [(ngModel)]="searchOptions.cctype"></md-input>
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CCF6' | translate}}" [(ngModel)]="searchOptions.first_six"></md-input>
-        <md-input class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CCL4' | translate}}" [(ngModel)]="searchOptions.last_four"></md-input>
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ALIAS' | translate}}" [(ngModel)]="searchOptions.alias">
+        </mat-input-container>
+
+        <mat-input-container>
+          <input matInput [disabled]="true" class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CCTYPE' | translate}}" [(ngModel)]="searchOptions.cctype">
+        </mat-input-container>
+
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CCF6' | translate}}" [(ngModel)]="searchOptions.first_six">
+        </mat-input-container>
+
+        <mat-input-container>
+          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CCL4' | translate}}" [(ngModel)]="searchOptions.last_four">
+        </mat-input-container>
       </div>
 
       <div class="advanced-search__content__fields__button" (click)="search(firstInput)">
