--- a/src/app/pages/users-page/user-view/user-add-new/user-add-new.component.html
+++ b/src/app/pages/users-page/user-view/user-add-new/user-add-new.component.html
@@ -16,13 +16,13 @@
       <mat-checkbox class="flex-align--right" [checked]="entity.active" (change)="entity.toggleActive()" [disabled]="mode === modes.View"></mat-checkbox>
     </div>
 
-    <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input auto-focus required md-input [disabled]="mode === modes.View" placeholder="{{'USER_DETAILS_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
-    </md-input-container>
+    <mat-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
+      <input auto-focus required matInput [disabled]="mode === modes.View" placeholder="{{'USER_DETAILS_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
+    </mat-input-container>
 
-    <md-input-container [class.error]="formInvalid && !entity.email" class="entity-view__card__content__item">
-      <input required md-input (keydown)="isEmail($event, entity.email)" [disabled]="mode !== modes.Add" placeholder="{{'USER_DETAILS_EMAIL' | translate}}" name="email" [(ngModel)]="entity.email" type="text">
-    </md-input-container>
+    <mat-input-container [class.error]="formInvalid && !entity.email" class="entity-view__card__content__item">
+      <input required matInput (keydown)="isEmail($event, entity.email)" [disabled]="mode !== modes.Add" placeholder="{{'USER_DETAILS_EMAIL' | translate}}" name="email" [(ngModel)]="entity.email" type="text">
+    </mat-input-container>
 
     <ng-container *ngIf="mode === modes.Add">
       <div class="user-view__item flex-custom flex-custom--center">
