--- a/src/app/shared/components/search-input/search-input.component.html
+++ b/src/app/shared/components/search-input/search-input.component.html
@@ -2,14 +2,14 @@
   <button md-icon-button (click)="toggleSearchInput(searchInputField)"><mat-icon>search</mat-icon></button>
 
   <div class="search-container">
-    <md-input-container [ngClass]="{'search-visible': searchVisible}">
+    <mat-input-container [ngClass]="{'search-visible': searchVisible}">
       <input
         #searchInputField
-        md-input
+        matInput
         placeholder="{{'INDEXPAGE_SEARCH' | translate}}"
         type="text"
         [(ngModel)]="searchValue"
         (keydown)="onKey($event)">
-    </md-input-container>
+    </mat-input-container>
   </div>
 </div>
