--- a/src/app/authentication/registration-form/registration-form.component.html
+++ b/src/app/authentication/registration-form/registration-form.component.html
@@ -17,17 +17,17 @@
       </div>
     </div>
     <form #regForm="ngForm" class="registration-form__form">
-      <md-input-container [class.form-error]="formInvalid && !company">
-        <input md-input required placeholder="{{'REGISTER_FORM_COMPANY' | translate}}" type="text" name="company" [(ngModel)]="company">
-      </md-input-container>
+      <mat-input-container [class.form-error]="formInvalid && !company">
+        <input matInput required placeholder="{{'REGISTER_FORM_COMPANY' | translate}}" type="text" name="company" [(ngModel)]="company">
+      </mat-input-container>
 
-      <md-input-container [class.form-error]="formInvalid && !firstName">
-        <input md-input required placeholder="{{'REGISTER_FORM_FIRSTNAME' | translate}}" type="text" name="firstName" [(ngModel)]="firstName">
-      </md-input-container>
+      <mat-input-container [class.form-error]="formInvalid && !firstName">
+        <input matInput required placeholder="{{'REGISTER_FORM_FIRSTNAME' | translate}}" type="text" name="firstName" [(ngModel)]="firstName">
+      </mat-input-container>
 
-      <md-input-container [class.form-error]="formInvalid && !lastName">
-        <input md-input required placeholder="{{'REGISTER_FORM_LASTNAME' | translate}}" type="text" name="lastName" [(ngModel)]="lastName">
-      </md-input-container>
+      <mat-input-container [class.form-error]="formInvalid && !lastName">
+        <input matInput required placeholder="{{'REGISTER_FORM_LASTNAME' | translate}}" type="text" name="lastName" [(ngModel)]="lastName">
+      </mat-input-container>
     </form>
     <div class="registration-form__button" (click)="submitRegistrationData(regForm.form.valid)">{{'REGISTER_FORM_CONT' | translate}}</div>
 
