--- a/src/app/pages/customers-page/customer-view/credit-card-input/credit-card-input.component.html
+++ b/src/app/pages/customers-page/customer-view/credit-card-input/credit-card-input.component.html
@@ -16,7 +16,9 @@
   </div>
 
   <div class="customer-view__edit__info" [class.body-add]="addMode">
-    <md-input [disabled]="viewMode" [class.error]="formInvalid && !ccard.name" required placeholder="{{'FORMINPUTS_CREDITCARD_NAME' | translate}}" [(ngModel)]="ccard.name"></md-input>
+    <mat-input-container [class.error]="formInvalid && !ccard.name">
+      <input matInput [disabled]="viewMode" required placeholder="{{'FORMINPUTS_CREDITCARD_NAME' | translate}}" [(ngModel)]="ccard.name">
+    </mat-input-container>
     <input-credit-card [disabled]="viewMode" [class.error]="formInvalid && !ccard.ccnumber" [value]="ccard.ccnumber || (viewMode ? ccard.maskedNumber : ccard.ccnumber)" [placeholder]="'FORMINPUTS_CREDITCARD_NUMBER' | translate" (result)="ccard.ccnumber = $event"></input-credit-card>
 
     <div class="customer-view__edit__info__expiration">
