--- a/src/app/pages/customers-page/customer-view/customer-rebill-edit/customer-rebill-edit.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-rebill-edit/customer-rebill-edit.component.html
@@ -19,9 +19,9 @@
       </div>
 
       <div class="customer-rebill-edit__data__date__title">{{'CUSTOMER_REBILLEDIT_PRICE' | translate}}</div>
-      <md-input-container class="no-margin">
-        <input #priceInput md-input type="text" currencyInput [initPrice]="rebill.amount" (priceChanged)="rebill.amount = $event">
-      </md-input-container>
+      <mat-input-container class="no-margin">
+        <input #priceInput matInput type="text" currencyInput [initPrice]="rebill.amount" (priceChanged)="rebill.amount = $event">
+      </mat-input-container>
     </div>
   </div>
 
