--- a/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-view.component.html
+++ b/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-view.component.html
@@ -14,9 +14,9 @@
           {{entityBackup.name}}
         </span>
         <ng-template #createForm>
-          <md-input-container [class.error]="detailsFormInvalid && !entity.name">
-            <input required md-input placeholder="{{(addMode ? 'MERCHANTPROVIDERGROUP_INFO_NAME' : '') | translate}}" type="text" [(ngModel)]="entity.name">
-          </md-input-container>
+          <mat-input-container [class.error]="detailsFormInvalid && !entity.name">
+            <input required matInput placeholder="{{(addMode ? 'MERCHANTPROVIDERGROUP_INFO_NAME' : '') | translate}}" type="text" [(ngModel)]="entity.name">
+          </mat-input-container>
         </ng-template>
       </div>
     </div>
@@ -39,9 +39,9 @@
           <div class="entity-view__card__header__title">{{'MERCHANTPROVIDERGROUP_MERCHANT_ADDTITLE' | translate}}</div>
         </div>
         <form #merchantProviderInputForm="ngForm" class="entity-view__card__content">
-          <md-input-container style="width: 110px" class="entity-view__card__content__item" [class.error]="formInvalid && !providerToAdd.distribution">
-            <input required md-input placeholder="{{'MERCHANTPROVIDERGROUP_MERCHANT_DISTRIBUTION' | translate}}" name="distribution" (keydown)="isFloatNumeric($event)" [(ngModel)]="providerToAdd.distribution" type="text">
-          </md-input-container>
+          <mat-input-container style="width: 110px" class="entity-view__card__content__item" [class.error]="formInvalid && !providerToAdd.distribution">
+            <input required matInput placeholder="{{'MERCHANTPROVIDERGROUP_MERCHANT_DISTRIBUTION' | translate}}" name="distribution" (keydown)="isFloatNumeric($event)" [(ngModel)]="providerToAdd.distribution" type="text">
+          </mat-input-container>
 
           <autocomplete-input style="font-size: 14px;"
                               [class.error]="formInvalid && !providerToAdd.merchantProvider.id"
