--- a/src/app/pages/notifications-page/alerts-section/alerts-section.component.html
+++ b/src/app/pages/notifications-page/alerts-section/alerts-section.component.html
@@ -1,7 +1,7 @@
 <div class="notifications__filter">
-  <md-input-container>
-    <input md-input placeholder="{{'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filter" type="text">
-  </md-input-container>
+  <mat-input-container>
+    <input matInput placeholder="{{'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filter" type="text">
+  </mat-input-container>
 </div>
 
 <div class="notifications notifications-list notifications-list--standalone">
