--- a/src/app/pages/roles-page/roles-index/role-add-new/role-add-new.component.html
+++ b/src/app/pages/roles-page/roles-index/role-add-new/role-add-new.component.html
@@ -4,9 +4,9 @@
   </div>
 
   <div class="entity-view__card__content">
-    <md-input-container [class.error]="formInvalid && !role.name" class="entity-view__card__content__item">
-      <input auto-focus required md-input placeholder="{{'ROLE_INFO_NAME' | translate}}" [(ngModel)]="role.name" type="text">
-    </md-input-container>
+    <mat-input-container [class.error]="formInvalid && !role.name" class="entity-view__card__content__item">
+      <input auto-focus required matInput placeholder="{{'ROLE_INFO_NAME' | translate}}" [(ngModel)]="role.name" type="text">
+    </mat-input-container>
   </div>
 
   <div class="entity-view__card__actions">
