--- a/src/app/pages/state-machine-page/state-machine-live/state-machine-rebill/state-machine-rebill.component.html
+++ b/src/app/pages/state-machine-page/state-machine-live/state-machine-rebill/state-machine-rebill.component.html
@@ -50,34 +50,34 @@
       <md-card-content>
         <div>
           <div class="half">
-            <md-input-container class="full">
-              <input required disabled md-input name="fullName" placeholder="{{'FORMINPUTS_FULLNAME' | translate}}" [(ngModel)]="rebill.parentSession.customer.fullName">
-            </md-input-container>
+            <mat-input-container class="full">
+              <input required disabled matInput name="fullName" placeholder="{{'FORMINPUTS_FULLNAME' | translate}}" [(ngModel)]="rebill.parentSession.customer.fullName">
+            </mat-input-container>
           </div>
 
           <div class="flex-custom full">
-            <md-input-container class="half">
-              <input required disabled md-input name="address" placeholder="{{'FORMINPUTS_ADDRESS' | translate}}" [(ngModel)]="rebill.parentSession.customer.address.line1">
-            </md-input-container>
-            <md-input-container class="half space-left">
-              <input required disabled md-input name="city" placeholder="{{'FORMINPUTS_CITY' | translate}}" [(ngModel)]="rebill.parentSession.customer.address.city">
-            </md-input-container>
+            <mat-input-container class="half">
+              <input required disabled matInput name="address" placeholder="{{'FORMINPUTS_ADDRESS' | translate}}" [(ngModel)]="rebill.parentSession.customer.address.line1">
+            </mat-input-container>
+            <mat-input-container class="half space-left">
+              <input required disabled matInput name="city" placeholder="{{'FORMINPUTS_CITY' | translate}}" [(ngModel)]="rebill.parentSession.customer.address.city">
+            </mat-input-container>
           </div>
 
           <div class="flex-custom full">
             <div class="flex-custom half">
-              <md-input-container class="half">
-                <input required disabled md-input name="state" placeholder="{{'FORMINPUTS_STATE' | translate}}" [(ngModel)]="rebill.parentSession.customer.address.state">
-              </md-input-container>
+              <mat-input-container class="half">
+                <input required disabled matInput name="state" placeholder="{{'FORMINPUTS_STATE' | translate}}" [(ngModel)]="rebill.parentSession.customer.address.state">
+              </mat-input-container>
 
-              <md-input-container class="half space-left">
-                <input required disabled md-input name="postalCode" placeholder="{{'FORMINPUTS_ZIP' | translate}}" [(ngModel)]="rebill.parentSession.customer.address.zip">
-              </md-input-container>
+              <mat-input-container class="half space-left">
+                <input required disabled matInput name="postalCode" placeholder="{{'FORMINPUTS_ZIP' | translate}}" [(ngModel)]="rebill.parentSession.customer.address.zip">
+              </mat-input-container>
             </div>
 
-            <md-input-container class="half space-left">
-              <input required disabled md-input name="country" placeholder="{{'FORMINPUTS_COUNTRY' | translate}}" [(ngModel)]="rebill.parentSession.customer.address.country">
-            </md-input-container>
+            <mat-input-container class="half space-left">
+              <input required disabled matInput name="country" placeholder="{{'FORMINPUTS_COUNTRY' | translate}}" [(ngModel)]="rebill.parentSession.customer.address.country">
+            </mat-input-container>
           </div>
         </div>
       </md-card-content>
