--- a/src/app/reports/components/report-table/report-table.component.html
+++ b/src/app/reports/components/report-table/report-table.component.html
@@ -1,7 +1,9 @@
 <div class="reports-table">
   <div class="reports-table__title">
     <span>{{title | translate}}</span>
-    <md-input *ngIf="showFilter" placeholder="Filter" [(ngModel)]="filterString"></md-input>
+    <mat-input-container *ngIf="showFilter">
+      <input matInput placeholder="Filter" [(ngModel)]="filterString">
+    </mat-input-container>
     <table-pagination
       [class.reports-table__pagination--right]="!showFilter"
       [limit]="limit"
