--- a/src/app/shared/components/add-schedule/add-schedule.component.html
+++ b/src/app/shared/components/add-schedule/add-schedule.component.html
@@ -27,27 +27,27 @@
                           (selected)="addNewProductSchedule($event)">
       </autocomplete-input>
 
-      <md-input-container>
-        <input required md-input placeholder="{{'PRODUCTSCHEDULE_CYCLE_PRICE' | translate}}" (keydown)="isCurrency($event)" name="price" type="text" currencyInput [initPrice]="scheduleToAdd.price" (priceChanged)="scheduleToAdd.price = $event">
+      <mat-input-container>
+        <input required matInput placeholder="{{'PRODUCTSCHEDULE_CYCLE_PRICE' | translate}}" (keydown)="isCurrency($event)" name="price" type="text" currencyInput [initPrice]="scheduleToAdd.price" (priceChanged)="scheduleToAdd.price = $event">
         <div class="helper-text">{{'PRODUCTSCHEDULE_CYCLE_PRICETIP' | translate}}</div>
-      </md-input-container>
+      </mat-input-container>
     </div>
 
     <div style="margin-top: 15px;" class="flex-custom">
-      <md-input-container [class.error]="formInvalid && (+scheduleToAdd.start > +scheduleToAdd.end)">
-        <input required md-input placeholder="{{'PRODUCTSCHEDULE_CYCLE_START' | translate}}" (keydown)="isNumeric($event)" name="start" [(ngModel)]="scheduleToAdd.start" type="text">
+      <mat-input-container [class.error]="formInvalid && (+scheduleToAdd.start > +scheduleToAdd.end)">
+        <input required matInput placeholder="{{'PRODUCTSCHEDULE_CYCLE_START' | translate}}" (keydown)="isNumeric($event)" name="start" [(ngModel)]="scheduleToAdd.start" type="text">
         <div class="helper-text">{{'PRODUCTSCHEDULE_CYCLE_STARTTIP' | translate}}</div>
-      </md-input-container>
+      </mat-input-container>
 
-      <md-input-container [class.error]="formInvalid && (+scheduleToAdd.start > +scheduleToAdd.end)">
-        <input #endField md-input placeholder="{{'PRODUCTSCHEDULE_CYCLE_END' | translate}}" (keydown)="isNumeric($event)" name="end" [(ngModel)]="scheduleToAdd.end" type="text">
+      <mat-input-container [class.error]="formInvalid && (+scheduleToAdd.start > +scheduleToAdd.end)">
+        <input #endField matInput placeholder="{{'PRODUCTSCHEDULE_CYCLE_END' | translate}}" (keydown)="isNumeric($event)" name="end" [(ngModel)]="scheduleToAdd.end" type="text">
         <div class="helper-text">{{'PRODUCTSCHEDULE_CYCLE_ENDTIP' | translate}}</div>
-      </md-input-container>
+      </mat-input-container>
     </div>
-    <md-input-container style="margin-top: 15px;" [class.error]="formInvalid && (!scheduleToAdd.period || +scheduleToAdd.period < 1)">
-      <input required md-input placeholder="{{'PRODUCTSCHEDULE_CYCLE_PERIOD' | translate}}" (keydown)="isNumeric($event)" name="period" [(ngModel)]="scheduleToAdd.period" type="text">
+    <mat-input-container style="margin-top: 15px;" [class.error]="formInvalid && (!scheduleToAdd.period || +scheduleToAdd.period < 1)">
+      <input required matInput placeholder="{{'PRODUCTSCHEDULE_CYCLE_PERIOD' | translate}}" (keydown)="isNumeric($event)" name="period" [(ngModel)]="scheduleToAdd.period" type="text">
       <div class="helper-text">{{'PRODUCTSCHEDULE_CYCLE_PERIODTIP' | translate}}</div>
-    </md-input-container>
+    </mat-input-container>
 
   </form>
 
