--- a/src/app/shared/components/autocomplete-input/autocomplete-input.component.html
+++ b/src/app/shared/components/autocomplete-input/autocomplete-input.component.html
@@ -1,8 +1,8 @@
 <div class="default-autocomplete-input">
   <div class="default-autocomplete-input__input">
-    <md-input-container [floatingPlaceholder]="floatingPlaceholder" [class.default-autocomplete-input__input--full-width]="fullWidth">
-      <input #input md-input autocomplete=off auto-focus [applyAutofocus]="applyAutofocus" (ngModelChange)="change($event)" (input)="valueChanged.emit($event)" [ngModel]="currentValue" (keydown)="onKey($event)" [required]="required" (blur)="blurred()" (focus)="focused()" (click)="focused()" [disabled]="disabled" placeholder="{{placeholder}}" type="text">
-    </md-input-container>
+    <mat-input-container [floatPlaceholder]="floatingPlaceholder" [class.default-autocomplete-input__input--full-width]="fullWidth">
+      <input #input matInput autocomplete=off auto-focus [applyAutofocus]="applyAutofocus" (ngModelChange)="change($event)" (input)="valueChanged.emit($event)" [ngModel]="currentValue" (keydown)="onKey($event)" [required]="required" (blur)="blurred()" (focus)="focused()" (click)="focused()" [disabled]="disabled" placeholder="{{placeholder}}" type="text">
+    </mat-input-container>
     <mat-icon [class.rotated]="showOptions" *ngIf="showArrow" (click)="arrowClicked(input)">keyboard_arrow_down</mat-icon>
   </div>
   <div #optionsContainer class="default-autocomplete-input__options" *ngIf="showOptions && (filteredOptions.length > 0 || unmatchedEnabled)">
