--- a/src/app/shared/components/filter-input/filter-input.component.html
+++ b/src/app/shared/components/filter-input/filter-input.component.html
@@ -2,14 +2,14 @@
   <button md-icon-button (click)="toggleFilterInput(searchInputField)"><mat-icon>filter_list</mat-icon></button>
 
   <div class="search-container">
-    <md-input-container [ngClass]="{'search-visible': filterVisible}">
+    <mat-input-container [ngClass]="{'search-visible': filterVisible}">
       <input
         #searchInputField
-        md-input
+        matInput
         placeholder="{{'INDEXPAGE_FILTER' | translate}}"
         type="text"
         [(ngModel)]="filterValue"
         (keyup)="onKeyUp()">
-    </md-input-container>
+    </mat-input-container>
   </div>
 </div>
